admin modificat si quiz model

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,25 @@
 }
 
 @layer components {
+  /* .aa{
+    apply d
+    
+    
+    display: flex; width: 100%;
+    flex-direction: row;
+    gap: .5rem;
+    border-radius: 9999px;
+    border-width: 1px;
+    --tw-border-opacity: 1;
+    border-color: rgb(237 241 241 / var(--tw-border-opacity, 1));
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    --tw-shadow: 0 1px 2px 0 #0000000d;
+    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000)," 
+  } */
   .form-btn {
     @apply bg-primary text-dark-100 hover:bg-primary inline-flex min-h-14 w-full items-center justify-center rounded-md px-6 py-2 font-bold text-base !important;
   }
